# homeloan

./: .dockerignore  Dockerfile  README.md  loan_amortization.ipynb  pyproject.toml
binder/: requirements.txt
src/loan/: amortization.py  main.py
