[project]
name = "loan"
version = "0.1.0"
description = "Loan amortization schedule calculator"
requires-python = ">=3.9"
dependencies = [
    "tabulate>=0.9.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.scripts]
loan = "loan.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loan"]
