[project]
name = "loan"
version = "0.1.0"
description = "Loan amortization schedule calculator"
requires-python = ">=3.13"
dependencies = [
    "tabulate>=0.10.0",
    "matplotlib>=3.10.0",
    "numpy>=2.4.0",
    "pandas>=3.0.0",
]

[project.scripts]
loan = "loan.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loan"]
